- bug fix: sliders is covered by grid due to z-index issue  - bump version

--- a/src/index.styl
+++ b/src/index.styl
@@ -106,6 +106,7 @@ initabs()
     align-items: center
     justify-content: space-between
     position: absolute
+    z-index: 1
     background: #fff
     color: rgba(0,0,0,.5)
     padding: .25em
